--- a/ZooCode/Pages/ZooAnimals/Create.cshtml
+++ b/ZooCode/Pages/ZooAnimals/Create.cshtml
@@ -22,6 +22,13 @@
                 <select asp-for="ZooAnimal.AnimalID" class ="form-control" asp-items="ViewBag.AnimalID"></select>
             </div>
             <div class="form-group">
+                @if (Model.ErrorCreateMSG != null)
+                {
+                    @Model.ErrorCreateMSG
+                    ;
+                }
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
