--- a/ZooCode/Pages/Zoos/Create.cshtml
+++ b/ZooCode/Pages/Zoos/Create.cshtml
@@ -22,6 +22,12 @@
                 <label asp-for="Zoo.Zoo_address" class="control-label"></label>
                 <input asp-for="Zoo.Zoo_address" class="form-control" />
                 <span asp-validation-for="Zoo.Zoo_address" class="text-danger"></span>
+            </div>   
+            <div class="form-group">
+                @if (Model.ErrorMSGCreate != null)
+                {
+                    @Model.ErrorMSGCreate;
+                }
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
